Added help button and template

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Minecraft JSON UI String Formatter</h1>
-        
+        <button class="help-btn global-help-btn" id="globalHelpBtn" onclick="showHelp()">?</button>
         <div class="section">
             <h3>Configuration</h3>
             <div class="input-group">
@@ -29,7 +29,6 @@
         <div class="section" id="displaySection" style="display: none;">
             <div class="top-bar">
                 <h3>String Analysis</h3>
-                <button class="help-btn" onclick="showHelp()">?</button>
             </div>
             <div class="info">
                 <div>Original Length: <span id="originalLength">0</span> characters</div>
